Fix login link text on small devices

--- a/ckanext/ckanext-apicatalog/scss/masthead.scss
+++ b/ckanext/ckanext-apicatalog/scss/masthead.scss
@@ -269,7 +269,7 @@ $masthead-doublerow-height: 89px;
         font-weight: 600;
         letter-spacing: 0.4px;
         padding: 5px 15px;
-        display: block;
+        display: flex;
       }
 
       &:focus {
